# PyDataShred

./: .gitignore  .gitpod.yml  FAQ.md  Pipfile  README.md  Release Notes.md  package-lock.json  package.json  pypi.md  pyproject.toml  requirements.txt  run_api.sh  setup.py  sql_dump.sql  sql_run.sh
archives/: package-lock.json  sql_run.sh
datashredpy/api/: app.py  emp.csv  models.py  routes.py  run.py  xapp.py  xroutes.py
datashredpy/cloud/aws/: dynamodb.py
datashredpy/helper/: data.py  enums.py
datashredpy/utilities/: __init__.py  init_spark.py
misc/: Metadata.py
tests/: TSV_test.py  Text_test.py  csv_test.py  delta_file_read.py  enums.py  json_test.py  parquet_parsing.py  test_parq.py  tsv_test.py  xlsx_test.py  xml_test.py
tests/helper/: test_data.py
tests/pandas/: csv_test.py  delta_file_read.py  json_test.py  parquet_parsing.py  xlsx_test.py
tests/pyspark/: test_json.py  test_parq.py  test_snow.py
tests/sqlite/: test_sqlite.py
tests_data/: XML_data.xml  a.csv  data_generator.py  demodata.json  emp.csv  emp.json  emp.tsv  emp.txt  emp2.csv  emp_1.json  emp_xml.xml  empx.tsv  readDb.py
tests_data/HATCHBACK/: F.xlsx  emp.csv  emp.parquet  emp_xml.xml  storage.db
tests_data/emp_pyspark.json/: .part-00000-3c2d1abc-d42d-453a-ba2a-8808a170e4d8-c000.json.crc  .part-00000-4a9d8e41-7871-4e89-ae97-1fc66ec9a4ec-c000.json.crc  part-00000-3c2d1abc-d42d-453a-ba2a-8808a170e4d8-c000.json  part-00000-bd460e96-a669-4e34-9784-23ac5333a76f-c000.json
tests_data/scripts/: data_creation.py  data_generator.py  read_sqlite3.py
(+2 files in other folders)
