[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pydatashred"
version = "1.0"
description = "A helper library based on modern data engineering involving data shredding at its core."
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies", "optional-dependencies"]  # Include both fields here

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
test = { file = ["requirements-opt.txt"] }

[pypi]
  username = __token__
  password = pypi-AgEIcHlwaS5vcmcCJGE5YjZiN2YzLTIzMjAtNGNiNS04YjIzLWZiMjMzOWFlNDdlNwACKlszLCI3ODkyNjNiYy1mN2ZhLTQ3MWEtYmU0NS05OTA0YmFmMjJlMmQiXQAABiBm_qTLMqY8Zsu_u0kRBYeTEerBvzifgBqXTo4E5y5RbQ